<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">拉手网</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startButton">开始体验</string>
    <string name="shop">团购</string>
    <string name="nearby">附近</string>
    <string name="my">我的</string>
    <string name="more">更多</string>
    <string name="default_location">郑州</string>
    <string name="choice_city">选择城市</string>
    <string name="keyword_search">输入城市搜索</string>
    <string name="load_city">定位城市</string>
    <string name="loading_city">正在定位中...</string>
    <string name="hard_load">正在玩命加载中 </string>
    <string name="map">地图 </string>
    <string name="search">搜索 </string>
    <string name="logo">图标</string>
    <string name="food">美食</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_by_count">账号登录</string>
    <string name="login_for_fast">快速登录</string>
    <string name="hit_count">请输入用户名/邮箱/手机号</string>
    <string name="hit_count_name">用户名</string>
    <string name="hit_password">请输入密码</string>
    <string name="hit_suerPwd">确定密码</string>
    <string name="hit_tel">请输入手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="forget_Pwd">忘记密码</string>
    <string name="text_wearn">你可以点击下方的图标进行第三方登录</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="qq_weibo">腾讯微博</string>
    <string name="qq">QQ</string>
    <string name="back_login">退出登录</string>
    <string name="acount_set">账号设置</string>
    <string name="change_pwd">修改登录密码</string>
    <string name="set_pay_pwd">设置支付密码</string>
    <string name="bind_phone">已绑定手机号</string>
    <string name="manage_address">管理收获地址</string>

</resources>