<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.AccountActivity">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_bg_n"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/acount_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/butn_activite_bg"
            android:drawableLeft="@drawable/back"
            android:gravity="center_vertical"
            android:text="@string/acount_set"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/change_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ico_setting_modify"
        android:drawableRight="@drawable/arrow_right_my_gray"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:drawablePadding="20dp"
        android:text="@string/change_pwd" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/filter_line"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/set_pay_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ico_setting_lock"
        android:drawableRight="@drawable/arrow_right_my_gray"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:drawablePadding="20dp"
        android:text="@string/set_pay_pwd" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/filter_line"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/bind_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ico_setting_tel"
        android:drawableRight="@drawable/arrow_right_my_gray"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:drawablePadding="20dp"
        android:text="@string/bind_phone" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/filter_line"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/manage_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ico_setting_bus"
        android:drawableRight="@drawable/arrow_right_my_gray"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:drawablePadding="20dp"
        android:text="@string/manage_address" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/filter_line"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/exit_for_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:background="@drawable/btn_login_bg"
        android:textColor="@color/white"
        android:text="@string/back_login" />

</LinearLayout>