<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/top_bg_n"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_activate_bg"
            android:drawableLeft="@drawable/back"
            android:gravity="center_vertical"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_corners"
        android:padding="5dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hit_count_name"
            android:textSize="15sp" >

        </EditText>
        <EditText
            android:id="@+id/register_Pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:hint="@string/hit_password" />

        <EditText
            android:id="@+id/register_surePwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/hit_suerPwd"
            android:inputType="textPassword"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:background="@drawable/btn_login_bg"
        android:textColor="@color/white"
        android:enabled="false"
        android:text="@string/register" />

</LinearLayout>